# semantic-video-compression

./: .gitignore  Makefile  README.md  autocomplete.c  x264.c  x264.h
analysis/: .gitignore  openface-analysis.ipynb
camera-recorder/: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
encoder/: encoder.c  ratecontrol.c
encoder/roi_detection/: roi_detection.h
roi-analyzer/: .gitignore  CMakeLists.txt  FES.cpp  FES.h  README.md  ROIDetector.h  main.cpp  prior.yml
roi-analyzer/cvsaliency/: CVSaliency.cpp  CVSaliency.h
roi-analyzer/facedetection/: facedetection.cpp  facedetection.h
roi-analyzer/fes/: FES.cpp  FES.h
scripts/: .gitignore  README.md  experiment.sh  extract_frame.sh
x264/: .gitignore  README.md  x264.c  x264.h
x264/encoder/: encoder.c  ratecontrol.c
x264/encoder/roi_detection/: roi_detection.c  roi_detection.h
